assets/_custom.scss
/* You can add custom styles here. */

// @import "plugins/numbered";
@import "plugins/scrollbars";

pre.mermaid {
    padding: 0px;
    background: white;
    color: #c49bff;
    font-size: 10px;
}

figcaption {
    font-size: 0.8em;
    color: #888;
}

